# colf_engine

./: .clang-format  .gitignore  CMakeLists.txt
src/: assert.c  assert.h  disk.c  disk.h  level.c  level.h  main.c  rdefs.h  stretchy_buffer.c  stretchy_buffer.h  utils.c  utils.h
src/containers/: dynstring.c  dynstring.h  stretchy_buffer.c  stretchy_buffer.h
src/game/: entity.c  entity.h  entity_functions.c  entity_functions.h  game_instance.c  game_instance.h  level.c  level.h
src/graphics/: gl_shader.c  gl_shader.h  model.c  model.h  renderer.c  renderer.h  shader.c  shader.h  sprite.c  sprite.h  text.c  text.h  texture.c  texture.h
src/run_data/: billboard.f.glsl  billboard.v.glsl  flat.f.glsl  flat.v.glsl  hud.f.glsl  hud.v.glsl
